Opened 10 years ago

Closed 5 years ago

#11733 closed bug (fixed)

Inconsistency "Settings" label in system applications

Reported by: Janus Owned by: stippi
Priority: normal Milestone: R1/beta3
Component: User Interface Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I was wondering if the correct label is "Settings" or "Preferences" and I found this

From the "Haiku Human Interface Guidelines"

Chapter 9. Common Menus and their Contents

[...] Options... (Command - ,) Show the window which is used to customize options for your program. This can be a submenu if your program only has a couple of options. [...]

ActivityMonitor		Settings>Settings...
Expander		Settings>Settings... [ALT+S]
HaikuDepot		(Uses Options for an  other purpose)
Icon-O-Matic		Settings (with sub menu Snap to grid)
Mail			Edit>Settings... [ALT+,]
MediaPlayer		Mediaplayer>Settings... [ALT+S]
Screenshot		Settings... (button)
SerialConnect		Settings (menu bar with submenu)
Terminal		Settings>Settings...
TextSearch		Settings (menu bar with submenu)
TV			Settings>Settings... [ALT+P]  (menu bar with submenu)
WebPositive		Window>Settings
Tracker			Window>Preferences...
Deskbar			Deskbar Preferences...

Change History (5)

comment:1 by pulkomandy, 10 years ago

The HIG is still a work in progress, and often needs to be adjusted to actual wording. I think the distinction is:

  • "Preferences" refers to the system-wide preferences (the one available in Deskbar > Preferences)
  • "Settings" refers to application settings

There are some special cases, for example Deskbar and Tracker settings are accessible in both ways. Clearly "Options" isn't used anywhere in Haiku, and would be confusing as we have an "option" key which is unrelated.

comment:2 by Janus, 10 years ago

I think at least the shortcut must be the same (ALT+,), is awful and confusing the use of ALT+S or ALT+P for the settings. Find where the settings menu is in the menubar is always a treasure hunt. The beauty of BeOS was the coherency.

I don't want to sound harsh, I love Haiku. :-)

Last edited 10 years ago by Janus (previous) (diff)

comment:3 by pulkomandy, 10 years ago

But ALT+, may not be reachable on some keyboard layouts if shift is needed to reach the , symbol (arabic and belarussian cyrillic are affected at least). That being said, these keyboards also don't have easily reachable S or P keys, so it doesn't help them much to use those. I think the choice of shortcut could be decided on the mailing list, I'll send a mail there. I'll also fix the HIG to read "Settings" instead of "Options".

Thanks for researching these issues, there is always room for improvements, but sometimes the fix isn't as simple as it seems.

in reply to:  3 comment:4 by Janus, 10 years ago

Replying to pulkomandy:

But ALT+, may not be reachable on some keyboard layouts if shift is needed to reach the , symbol (arabic and belarussian cyrillic are affected at least). That being said, these keyboards also don't have easily reachable S or P keys, so it doesn't help them much to use those. I think the choice of shortcut could be decided on the mailing list, I'll send a mail there. I'll also fix the HIG to read "Settings" instead of "Options".

I am a mac user and the shortcut for preferences is command-"," this explain why I'm glad with the HIG suggestion.

comment:5 by pulkomandy, 5 years ago

Milestone: R1R1/beta3
Resolution: fixed
Status: newclosed

Shortcuts unified in hrev54426. As far as I can see this was the remaining missing thing here.

Note: See TracTickets for help on using tickets.