src/apps/activitymonitor/ActivityWindow.cpp
@@ -135,7 +135,7 @@ ActivityWindow::ActivityWindow()
 	// "Settings" menu
 	menu = new BMenu(B_TRANSLATE("Settings"));
 	menu->AddItem(new BMenuItem(B_TRANSLATE("Settings" B_UTF8_ELLIPSIS),
-		new BMessage(kMsgShowSettings)));
+		new BMessage(kMsgShowSettings), ','));
 
 	menu->AddSeparatorItem();
 	fAlwaysOnTop = new BMenuItem(B_TRANSLATE("Always on top"), new BMessage(kMsgAlwaysOnTop));
