src/kits/tracker/ContainerWindow.cpp
@@ -2194,7 +2194,7 @@ BContainerWindow::AddWindowMenu(BMenu* menu)
 	menu->AddSeparatorItem();
 
 	item = new BMenuItem(B_TRANSLATE("Preferences" B_UTF8_ELLIPSIS),
-		new BMessage(kShowSettingsWindow));
+		new BMessage(kShowSettingsWindow), ',');
 	item->SetTarget(be_app);
 	menu->AddItem(item);
 }
